Source/Alternet.UI.Pal/Api/PropertyGrid.Api.h

ALTERNET_UI_API void* PropertyGrid_CreateFloatProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, double value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateFloatProperty(label, name, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateUIntProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, uint64_t value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateUIntProperty(label, name, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateLongStringProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, const char16_t* value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateLongStringProperty(label, name, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateDateProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, DateTime value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateDateProperty(label, name, value);
    });
}
ALTERNET_UI_API void PropertyGrid_Clear_(PropertyGrid* obj)
{
    MarshalExceptions<void>([&](){
        obj->Clear();
    });
}
ALTERNET_UI_API void* PropertyGrid_Append_(PropertyGrid* obj, void* property)
{
    return MarshalExceptions<void*>([&](){
        return obj->Append(property);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateEditEnumProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, void* choices, const char16_t* value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateEditEnumProperty(label, name, choices, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateEnumProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, void* choices, int value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateEnumProperty(label, name, choices, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateFlagsProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, void* choices, int value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateFlagsProperty(label, name, choices, value);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_ClearSelection_(PropertyGrid* obj, c_bool validation)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->ClearSelection(validation);
    });
}
ALTERNET_UI_API void PropertyGrid_ClearModifiedStatus_(PropertyGrid* obj)
{
    MarshalExceptions<void>([&](){
        obj->ClearModifiedStatus();
    });
}
ALTERNET_UI_API c_bool PropertyGrid_CollapseAll_(PropertyGrid* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->CollapseAll();
    });
}
ALTERNET_UI_API c_bool PropertyGrid_EditorValidate_(PropertyGrid* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->EditorValidate();
    });
}
ALTERNET_UI_API c_bool PropertyGrid_ExpandAll_(PropertyGrid* obj, c_bool expand)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->ExpandAll(expand);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreatePropCategory_(PropertyGrid* obj, const char16_t* label, const char16_t* name)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreatePropCategory(label, name);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetFirst_(PropertyGrid* obj, int flags)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetFirst(flags);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetProperty_(PropertyGrid* obj, const char16_t* name)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetProperty(name);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetPropertyByLabel_(PropertyGrid* obj, const char16_t* label)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetPropertyByLabel(label);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetPropertyByName_(PropertyGrid* obj, const char16_t* name)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetPropertyByName(name);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetPropertyByNameAndSubName_(PropertyGrid* obj, const char16_t* name, const char16_t* subname)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetPropertyByNameAndSubName(name, subname);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetSelection_(PropertyGrid* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetSelection();
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_GetPropertyName_(PropertyGrid* obj, void* property)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetPropertyName(property));
    });
}
ALTERNET_UI_API void PropertyGrid_InitAllTypeHandlers_()
{
    MarshalExceptions<void>([&](){
        PropertyGrid::InitAllTypeHandlers();
    });
}
ALTERNET_UI_API void PropertyGrid_RegisterAdditionalEditors_()
{
    MarshalExceptions<void>([&](){
        PropertyGrid::RegisterAdditionalEditors();
    });
}
ALTERNET_UI_API c_bool PropertyGrid_RestoreEditableState_(PropertyGrid* obj, const char16_t* src, int restoreStates)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->RestoreEditableState(src, restoreStates);
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_SaveEditableState_(PropertyGrid* obj, int includedStates)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->SaveEditableState(includedStates));
    });
}
ALTERNET_UI_API void PropertyGrid_SetBoolChoices_(const char16_t* trueChoice, const char16_t* falseChoice)
{
    MarshalExceptions<void>([&](){
        PropertyGrid::SetBoolChoices(trueChoice, falseChoice);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_SetColumnProportion_(PropertyGrid* obj, uint32_t column, int proportion)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->SetColumnProportion(column, proportion);
    });
}
ALTERNET_UI_API int PropertyGrid_GetColumnProportion_(PropertyGrid* obj, uint32_t column)
{
    return MarshalExceptions<int>([&](){
        return obj->GetColumnProportion(column);
    });
}
ALTERNET_UI_API void PropertyGrid_Sort_(PropertyGrid* obj, int flags)
{
    MarshalExceptions<void>([&](){
        obj->Sort(flags);
    });
}
ALTERNET_UI_API void PropertyGrid_RefreshProperty_(PropertyGrid* obj, void* p)
{
    MarshalExceptions<void>([&](){
        obj->RefreshProperty(p);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateColorProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, Color value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateColorProperty(label, name, value);
    });
}
ALTERNET_UI_API void PropertyGrid_SetPropertyReadOnly_(PropertyGrid* obj, void* id, c_bool set, int flags)
{
    MarshalExceptions<void>([&](){
        obj->SetPropertyReadOnly(id, set, flags);
    });
}
ALTERNET_UI_API void PropertyGrid_SetPropertyValueUnspecified_(PropertyGrid* obj, void* id)
{
    MarshalExceptions<void>([&](){
        obj->SetPropertyValueUnspecified(id);
    });
}
ALTERNET_UI_API void* PropertyGrid_AppendIn_(PropertyGrid* obj, void* id, void* newproperty)
{
    return MarshalExceptions<void*>([&](){
        return obj->AppendIn(id, newproperty);
    });
}
ALTERNET_UI_API void PropertyGrid_BeginAddChildren_(PropertyGrid* obj, void* id)
{
    MarshalExceptions<void>([&](){
        obj->BeginAddChildren(id);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_Collapse_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->Collapse(id);
    });
}
ALTERNET_UI_API void PropertyGrid_DeleteProperty_(PropertyGrid* obj, void* id)
{
    MarshalExceptions<void>([&](){
        obj->DeleteProperty(id);
    });
}
ALTERNET_UI_API void* PropertyGrid_RemoveProperty_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<void*>([&](){
        return obj->RemoveProperty(id);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_DisableProperty_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->DisableProperty(id);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_EnableProperty_(PropertyGrid* obj, void* id, c_bool enable)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->EnableProperty(id, enable);
    });
}
ALTERNET_UI_API void PropertyGrid_EndAddChildren_(PropertyGrid* obj, void* id)
{
    MarshalExceptions<void>([&](){
        obj->EndAddChildren(id);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_Expand_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->Expand(id);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetFirstChild_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetFirstChild(id);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetPropertyCategory_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetPropertyCategory(id);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetPropertyClientData_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetPropertyClientData(id);
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_GetPropertyHelpString_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetPropertyHelpString(id));
    });
}
ALTERNET_UI_API void* PropertyGrid_GetPropertyImage_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetPropertyImage(id);
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_GetPropertyLabel_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetPropertyLabel(id));
    });
}
ALTERNET_UI_API void* PropertyGrid_GetPropertyParent_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetPropertyParent(id);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetPropertyValueAsVariant_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetPropertyValueAsVariant(id);
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_GetPropertyValueAsString_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetPropertyValueAsString(id));
    });
}
ALTERNET_UI_API int64_t PropertyGrid_GetPropertyValueAsLong_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<int64_t>([&](){
        return obj->GetPropertyValueAsLong(id);
    });
}
ALTERNET_UI_API uint64_t PropertyGrid_GetPropertyValueAsULong_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<uint64_t>([&](){
        return obj->GetPropertyValueAsULong(id);
    });
}
ALTERNET_UI_API int PropertyGrid_GetPropertyValueAsInt_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<int>([&](){
        return obj->GetPropertyValueAsInt(id);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_GetPropertyValueAsBool_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetPropertyValueAsBool(id);
    });
}
ALTERNET_UI_API double PropertyGrid_GetPropertyValueAsDouble_(PropertyGrid* obj, void* id)
{
    return MarshalExceptions<double>([&](){
        return obj->GetPropertyValueAsDouble(id);
    });
}